// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`an add more licenses button should be shown when no more licenses are available 1`] = `
.c14 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c14:hover,
.c14:focus {
  color: #fff;
}

.c14:hover,
.c14:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c14:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c19 {
  min-width: 152px;
}

.c13 {
  background-repeat: no-repeat;
  background-image: url( blue-plus-circle.svg );
  background-position: 8px 50%;
  background-size: 1em;
  padding-left: 36px;
}

.c12 {
  border: 0;
  cursor: pointer;
  background-color: transparent;
  background-position: 0.5em 50%;
  color: #0066cd;
  box-shadow: none;
  text-transform: none;
  padding-left: 2em;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-shadow: none;
  height: 32px;
  padding: 4px 16px 0 2em;
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c12:hover,
.c12:focus {
  box-shadow: none;
  background-color: #f1f1f1;
  color: #0066cd;
}

.c12:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c5 {
  background-color: #a5d6a7;
  border-radius: 8px;
  height: 16px;
  width: 40px;
  cursor: pointer;
  margin: 0;
  outline: 0;
}

.c5:focus > span {
  box-shadow: inset 0 0 0 1px #fff,0 0 0 1px #5b9dd9,0 0 2px 1px rgba(30,140,190,.8);
}

.c6 {
  background-color: #64a60a;
  margin-left: 16px;
  box-shadow: 0 2px 2px 2px rgba(0,0,0,0.1);
  border-radius: 100%;
  height: 24px;
  width: 24px;
  position: absolute;
  margin-top: -4px;
}

.c7 {
  padding: 6px 0 0;
  font-size: 14px;
  line-height: 20px;
  width: 40px;
  text-align: center;
  display: inline-block;
  margin: 0;
}

.c1 {
  background: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1:first-child {
  margin-top: 0;
}

.c3 {
  font-size: 14px;
  padding-left: 40px;
}

.c3:first-child {
  padding-left: 0;
}

.c3::before {
  position: absolute;
  left: -9999em;
  top: -24px;
  font-size: 1.286em;
  line-height: 0;
  content: none;
}

.c9 {
  -webkit-flex: 1 0 200px;
  -ms-flex: 1 0 200px;
  flex: 1 0 200px;
}

.c2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c15 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c8 {
  display: inline-block;
  width: 66px;
  height: 66px;
  vertical-align: middle;
  opacity: 0.2;
}

.c4 {
  display: inline-block;
  visibility: hidden;
  vertical-align: middle;
  margin: 6px 40px 0 2px;
}

.c10 {
  font-size: 16px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: block;
}

.c11 {
  display: none;
  font-weight: 300;
  margin-right: 8px;
  margin-top: 4px;
}

.c16 {
  display: inline-block;
}

@media screen and ( max-width:800px ) {
  .c18 {
    width: 100%;
    background-image: none;
    padding: 12px 16px;
  }
}

@media screen and ( max-width:800px ) {
  .c1 {
    padding: 16px;
  }
}

@media screen and ( max-width:800px ) {
  .c0 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }

  .c0:first-child {
    margin-top: 0;
  }

  .c0 > span::before {
    position: static;
    display: inline-block;
    padding-right: 0.5em;
    font-size: inherit;
  }
}

@media screen and ( max-width:1355px ) {
  .c3 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:800px ) {
  .c9 {
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
  }
}

@media screen and ( max-width:800px ) {
  .c8 {
    display: none;
  }
}

@media screen and ( max-width:1355px ) {
  .c4 {
    margin-right: 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c4 {
    margin-right: 0;
  }
}

@media screen and ( max-width:800px ) {
  .c10 {
    white-space: normal;
  }
}

@media screen and ( max-width:800px ) {
  .c17 {
    min-width: 100%;
    margin-top: 1em;
    padding-right: 0;
    padding-left: 0;
  }

  .c17:first-child {
    margin-top: 0px;
  }
}

<li
  className="c0 c1"
>
  <span
    className="c2 c3"
  >
    <span
      className="c4"
    >
      <div>
        <div
          aria-checked={true}
          aria-label="Enable subscription for: Subscription name"
          className="c5"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          role="checkbox"
          tabIndex="0"
        >
          <span
            className="c6"
          />
        </div>
        <span
          aria-hidden="true"
          className="c7"
        >
          On
        </span>
      </div>
    </span>
    <img
      alt=""
      className="c8"
      src="icon.svg"
    />
  </span>
  <span
    className="c9 c3"
  >
    <span
      className="c10"
    >
      Subscription name
    </span>
    <span
      className="c11"
    >
      <span>
        20/20 used
      </span>
    </span>
    <a
      className="c12 c13 c14"
      href="http://store.url.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Get another subscription
      </span>
      <span
        className="screen-reader-text c15"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
  </span>
  <span
    className="c16 c17 c2 c3"
  >
    <a
      className="c18 c19 c14"
      href="/account/subscriptions/subId"
      onClick={[Function]}
    >
      <span>
        Manage
      </span>
    </a>
  </span>
</li>
`;

exports[`the sitesubscription matches the snapshot 1`] = `
.c14 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c14:hover,
.c14:focus {
  color: #fff;
}

.c14:hover,
.c14:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c14:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c19 {
  min-width: 152px;
}

.c13 {
  background-repeat: no-repeat;
  background-image: url( blue-plus-circle.svg );
  background-position: 8px 50%;
  background-size: 1em;
  padding-left: 36px;
}

.c12 {
  border: 0;
  cursor: pointer;
  background-color: transparent;
  background-position: 0.5em 50%;
  color: #0066cd;
  box-shadow: none;
  text-transform: none;
  padding-left: 2em;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-shadow: none;
  height: 32px;
  padding: 4px 16px 0 2em;
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c12:hover,
.c12:focus {
  box-shadow: none;
  background-color: #f1f1f1;
  color: #0066cd;
}

.c12:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c5 {
  background-color: #a5d6a7;
  border-radius: 8px;
  height: 16px;
  width: 40px;
  cursor: pointer;
  margin: 0;
  outline: 0;
}

.c5:focus > span {
  box-shadow: inset 0 0 0 1px #fff,0 0 0 1px #5b9dd9,0 0 2px 1px rgba(30,140,190,.8);
}

.c6 {
  background-color: #64a60a;
  margin-left: 16px;
  box-shadow: 0 2px 2px 2px rgba(0,0,0,0.1);
  border-radius: 100%;
  height: 24px;
  width: 24px;
  position: absolute;
  margin-top: -4px;
}

.c7 {
  padding: 6px 0 0;
  font-size: 14px;
  line-height: 20px;
  width: 40px;
  text-align: center;
  display: inline-block;
  margin: 0;
}

.c1 {
  background: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1:first-child {
  margin-top: 0;
}

.c3 {
  font-size: 14px;
  padding-left: 40px;
}

.c3:first-child {
  padding-left: 0;
}

.c3::before {
  position: absolute;
  left: -9999em;
  top: -24px;
  font-size: 1.286em;
  line-height: 0;
  content: none;
}

.c9 {
  -webkit-flex: 1 0 200px;
  -ms-flex: 1 0 200px;
  flex: 1 0 200px;
}

.c2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c15 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c8 {
  display: inline-block;
  width: 66px;
  height: 66px;
  vertical-align: middle;
  opacity: 0.2;
}

.c4 {
  display: inline-block;
  visibility: hidden;
  vertical-align: middle;
  margin: 6px 40px 0 2px;
}

.c10 {
  font-size: 16px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: block;
}

.c11 {
  display: none;
  font-weight: 300;
  margin-right: 8px;
  margin-top: 4px;
}

.c16 {
  display: inline-block;
}

@media screen and ( max-width:800px ) {
  .c18 {
    width: 100%;
    background-image: none;
    padding: 12px 16px;
  }
}

@media screen and ( max-width:800px ) {
  .c1 {
    padding: 16px;
  }
}

@media screen and ( max-width:800px ) {
  .c0 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }

  .c0:first-child {
    margin-top: 0;
  }

  .c0 > span::before {
    position: static;
    display: inline-block;
    padding-right: 0.5em;
    font-size: inherit;
  }
}

@media screen and ( max-width:1355px ) {
  .c3 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:800px ) {
  .c9 {
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
  }
}

@media screen and ( max-width:800px ) {
  .c8 {
    display: none;
  }
}

@media screen and ( max-width:1355px ) {
  .c4 {
    margin-right: 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c4 {
    margin-right: 0;
  }
}

@media screen and ( max-width:800px ) {
  .c10 {
    white-space: normal;
  }
}

@media screen and ( max-width:800px ) {
  .c17 {
    min-width: 100%;
    margin-top: 1em;
    padding-right: 0;
    padding-left: 0;
  }

  .c17:first-child {
    margin-top: 0px;
  }
}

<li
  className="c0 c1"
>
  <span
    className="c2 c3"
  >
    <span
      className="c4"
    >
      <div>
        <div
          aria-checked={true}
          aria-label="Enable subscription for: Subscription name"
          className="c5"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          role="checkbox"
          tabIndex="0"
        >
          <span
            className="c6"
          />
        </div>
        <span
          aria-hidden="true"
          className="c7"
        >
          On
        </span>
      </div>
    </span>
    <img
      alt=""
      className="c8"
      src="icon.svg"
    />
  </span>
  <span
    className="c9 c3"
  >
    <span
      className="c10"
    >
      Subscription name
    </span>
    <span
      className="c11"
    >
      <span>
        14/20 used
      </span>
    </span>
    <a
      className="c12 c13 c14"
      href="http://store.url.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Get another subscription
      </span>
      <span
        className="screen-reader-text c15"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
  </span>
  <span
    className="c16 c17 c2 c3"
  >
    <a
      className="c18 c19 c14"
      href="/account/subscriptions/subId"
      onClick={[Function]}
    >
      <span>
        Manage
      </span>
    </a>
  </span>
</li>
`;
